# sjsneakerz

./: .gitignore  README.md
.github/workflows/: deploy.yml
clasp/: AddSoldFormatting.gs.js  Copy of Code.js  FixStatusFormulas.gs.js  MoneyFlowInitializer.js  SalesFormManager.js  VaultBalanceManager.js  create_sales_report.js.js  sales_api.js  sales_form_webapp.html  test_connection.js
python/: .gitignore  README.md  add_essentials_hoodie.py  add_inventory_filters.py  add_item_id_dropdown.py  create_inventory_form.py  create_resale_sheet.py  migrate_to_consolidated.py  pyproject.toml  remove_condition_column.py  requirements.txt
react/: ENV_SETUP.txt  QUICK_START.md  SETUP.md  next.config.ts  package-lock.json  package.json  run-dev-https.sh  run-dev-no-cors.sh
react/.next/dev/types/: routes.d.ts  validator.ts
react/public/: manifest.json
react/src/: SalesAPI.js
react/src/app/: globals.css  layout.tsx  page.tsx
react/src/app/api/proxy/: route.ts
react/src/app/api/test/: route.ts
react/src/app/components/: BarcodeScanner.tsx  BarcodeScannerCopilot.tsx  Header.tsx  PageWrapper.tsx  UserMenu.tsx
react/src/app/context/: AuthContext.tsx
react/src/app/inventory/: page.tsx
react/src/app/inventory-summary/: page.tsx
react/src/app/money-dashboard/: page.tsx
react/src/app/record-sale/: page.tsx
react/src/lib/: SalesAPI.ts
